{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 5,
  "lineage": "32ba8814-31cc-324f-f957-f1ccf7e8d527",
  "resources": [
    {
      "module": "module.dev.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08943a151bd468f4e",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:instance/i-073fac4efd9e95418",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073fac4efd9e95418",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mvp-key-v1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-051cd9125c3e877a9",
            "private_dns": "ip-172-16-30-5.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.30.5",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f3a9e6c69e8c5c77",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e771a9ef7cdd9df8",
            "tags": {
              "Environment": "prod",
              "Name": "dev-mysql",
              "Project": "tamnara-eks"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "dev-mysql",
              "Project": "tamnara-eks"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b5b5614e8c945fe"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev.module.sg.aws_security_group.backend",
            "module.dev.module.sg.aws_security_group.db",
            "module.dev.module.sg.aws_security_group.frontend",
            "module.dev.module.sg.aws_security_group.reverse_proxy",
            "module.shared.module.subnet.aws_subnet.private_a_db",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-03b38bb3f9402955a",
            "description": "Allow from Reverse Proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b38bb3f9402955a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.255.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc40722bd8c41f53"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "docker-v1-sg-backend-dev",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-backend-sg"
            },
            "tags_all": {
              "Name": "dev-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev.module.sg.aws_security_group.frontend",
            "module.dev.module.sg.aws_security_group.reverse_proxy",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-00b5b5614e8c945fe",
            "description": "Allow MySQL access from internal network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b5b5614e8c945fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow internal SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b38bb3f9402955a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "docker-v1-sg-db-dev",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-mysql-sg"
            },
            "tags_all": {
              "Name": "dev-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev.module.sg.aws_security_group.backend",
            "module.dev.module.sg.aws_security_group.frontend",
            "module.dev.module.sg.aws_security_group.reverse_proxy",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0fc40722bd8c41f53",
            "description": "Allow from Reverse Proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc40722bd8c41f53",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.255.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b89e9d9fe0e04692"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "docker-v1-sg-frontend-dev",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-frontend-sg"
            },
            "tags_all": {
              "Name": "dev-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev.module.sg.aws_security_group.reverse_proxy",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.dev.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reverse_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0b89e9d9fe0e04692",
            "description": "Allow HTTP/SSH from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b89e9d9fe0e04692",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from YOUR IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "docker-v1-sg-reverse-proxy-dev",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "reverse-proxy-sg"
            },
            "tags_all": {
              "Name": "reverse-proxy-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.eks.module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-05c549fa1d5eb8b83",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c549fa1d5eb8b83",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow internal VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tamnara-eks-prod-cluster-sg",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tamnara-eks-prod-cluster-sg"
            },
            "tags_all": {
              "Name": "tamnara-eks-prod-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.openvpn",
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c4d94bb44eff8915",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:instance/i-0279f65b735ad2f2e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0279f65b735ad2f2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mvp-key-v1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af856d3ac6885071",
            "private_dns": "ip-172-16-0-158.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.158",
            "public_dns": "ec2-13-125-186-251.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.186.251",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dd57b7f74eefd1b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c772738f9b746d7",
            "tags": {
              "Environment": "prod",
              "Name": "tamnara-eks-openvpn-server",
              "Project": "tamnara-eks"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "tamnara-eks-openvpn-server",
              "Project": "tamnara-eks"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0609d42b01cc2692d"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod.module.sg.aws_security_group.openvpn",
            "module.shared.module.subnet.aws_subnet.public_a",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0adfba1cff862191e",
            "description": "Allow MySQL from backend SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adfba1cff862191e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c04d49539f91dce"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tamnara-eks-prod-rds-sg",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tamnara-eks-prod-rds-sg"
            },
            "tags_all": {
              "Name": "tamnara-eks-prod-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod.module.sg.aws_security_group.backend",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-07c04d49539f91dce",
            "description": "Security group for backend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c04d49539f91dce",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow internal SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow internal traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tamnara-eks-prod-backend-sg",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-sg"
            },
            "tags_all": {
              "Name": "backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0d7851728253a3d02",
            "description": "Security group for frontend instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7851728253a3d02",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow internal SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Allow internal VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tamnara-eks-prod-frontend-sg",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-sg"
            },
            "tags_all": {
              "Name": "frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:security-group/sg-0609d42b01cc2692d",
            "description": "Allow from openVPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0609d42b01cc2692d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              }
            ],
            "name": "docker-v1-sg-openvpn",
            "name_prefix": "",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openvpn_sg"
            },
            "tags_all": {
              "Name": "openvpn_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "data",
      "type": "aws_vpc",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:vpc/vpc-0293cca3cb29f35f1",
            "cidr_block": "10.255.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a71c106324d9736b",
                "cidr_block": "10.255.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-057e17760c1177c52",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0293cca3cb29f35f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d552a3b2660fcd12",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "shared-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0950e81829bbf1ae0",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d0ea9fb690fe4219",
            "subnet_id": "subnet-05c772738f9b746d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.subnet.aws_subnet.public_a",
            "module.shared.module.vpc.aws_internet_gateway.igw",
            "module.shared.module.vpc.aws_route_table.public",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c248b80f7fb89bea",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d0ea9fb690fe4219",
            "subnet_id": "subnet-00757fb2a0619a042"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.subnet.aws_subnet.public_c",
            "module.shared.module.vpc.aws_internet_gateway.igw",
            "module.shared.module.vpc.aws_route_table.public",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0122636193dd98a04",
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:elastic-ip/eipalloc-0122636193dd98a04",
            "domain": "vpc",
            "id": "eipalloc-0122636193dd98a04",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-227-203.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.227.203",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "docker-v1-nat-eip"
            },
            "tags_all": {
              "Name": "docker-v1-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0122636193dd98a04",
            "association_id": "eipassoc-06b149b4004bbc511",
            "connectivity_type": "public",
            "id": "nat-0e78428ae2013d75b",
            "network_interface_id": "eni-03ee9a1e4dba9bedc",
            "private_ip": "172.16.0.76",
            "public_ip": "3.34.227.203",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05c772738f9b746d7",
            "tags": {
              "Name": "docker-v1-natgw"
            },
            "tags_all": {
              "Name": "docker-v1-natgw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_eip.nat",
            "module.shared.module.subnet.aws_subnet.public_a",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0377eb27f28c7b7891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e78428ae2013d75b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0377eb27f28c7b789",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_eip.nat",
            "module.shared.module.nat_gateway.aws_nat_gateway.this",
            "module.shared.module.nat_gateway.aws_route_table.private",
            "module.shared.module.subnet.aws_subnet.public_a",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:route-table/rtb-0377eb27f28c7b789",
            "id": "rtb-0377eb27f28c7b789",
            "owner_id": "346011888304",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "docker-v1-privateRT"
            },
            "tags_all": {
              "Name": "docker-v1-privateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:route-table/rtb-0df34ac83094356c1",
            "id": "rtb-0df34ac83094356c1",
            "owner_id": "346011888304",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "docker-v1-privateRT-db"
            },
            "tags_all": {
              "Name": "docker-v1-privateRT-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3c8b2cd0dd73de8",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0377eb27f28c7b789",
            "subnet_id": "subnet-0f07558f627063bff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_route_table.private",
            "module.shared.module.subnet.aws_subnet.private_a_back",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511fd6b5b0365a7c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0df34ac83094356c1",
            "subnet_id": "subnet-0e771a9ef7cdd9df8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_route_table.private_db",
            "module.shared.module.subnet.aws_subnet.private_a_db",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0f359a21d7cdb08",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0377eb27f28c7b789",
            "subnet_id": "subnet-0f528f3c3fadd0dc0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_route_table.private",
            "module.shared.module.subnet.aws_subnet.private_a_front",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcfd06ed6f0a7089",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0377eb27f28c7b789",
            "subnet_id": "subnet-0109906ab5b5174f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_route_table.private",
            "module.shared.module.subnet.aws_subnet.private_c_back",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b54e92bcfe48720",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0df34ac83094356c1",
            "subnet_id": "subnet-01f64fb7b57298e63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_route_table.private_db",
            "module.shared.module.subnet.aws_subnet.private_c_db",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013c61698c33ba06c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0377eb27f28c7b789",
            "subnet_id": "subnet-0583dc8da2ce6aba0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.nat_gateway.aws_route_table.private",
            "module.shared.module.subnet.aws_subnet.private_c_front",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-0f07558f627063bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f07558f627063bff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-a-back"
            },
            "tags_all": {
              "Name": "private-subnet-a-back"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-0e771a9ef7cdd9df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e771a9ef7cdd9df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-a-db"
            },
            "tags_all": {
              "Name": "private-subnet-a-db"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-0f528f3c3fadd0dc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f528f3c3fadd0dc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-a-front"
            },
            "tags_all": {
              "Name": "private-subnet-a-front"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_back",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-0109906ab5b5174f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109906ab5b5174f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-c-back"
            },
            "tags_all": {
              "Name": "private-subnet-c-back"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-01f64fb7b57298e63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f64fb7b57298e63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-c-db"
            },
            "tags_all": {
              "Name": "private-subnet-c-db"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-0583dc8da2ce6aba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0583dc8da2ce6aba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "private-subnet-c-front"
            },
            "tags_all": {
              "Name": "private-subnet-c-front"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-05c772738f9b746d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c772738f9b746d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared.module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:subnet/subnet-00757fb2a0619a042",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00757fb2a0619a042",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346011888304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "public-subnet-c"
            },
            "tags_all": {
              "Name": "public-subnet-c"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:internet-gateway/igw-0411fc9393fd249c9",
            "id": "igw-0411fc9393fd249c9",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tamnara-eks-prod-igw"
            },
            "tags_all": {
              "Name": "tamnara-eks-prod-igw"
            },
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:route-table/rtb-0d0ea9fb690fe4219",
            "id": "rtb-0d0ea9fb690fe4219",
            "owner_id": "346011888304",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0411fc9393fd249c9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tamnara-eks-prod-publicRT"
            },
            "tags_all": {
              "Name": "tamnara-eks-prod-publicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb47682a4ba774bc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_internet_gateway.igw",
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:346011888304:vpc/vpc-0fb47682a4ba774bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ea43bc6e881c8cf8",
            "default_route_table_id": "rtb-026ecc89b5623c7ea",
            "default_security_group_id": "sg-003fd812dabe1a25e",
            "dhcp_options_id": "dopt-057e17760c1177c52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb47682a4ba774bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026ecc89b5623c7ea",
            "owner_id": "346011888304",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "tamnara-eks-prod-vpc"
            },
            "tags_all": {
              "Name": "tamnara-eks-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.shared.module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_to_requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rt-0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.255.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0377eb27f28c7b78916657118",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0377eb27f28c7b789",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09d7ba4681766cdec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.data.aws_vpc.shared",
            "module.shared.module.nat_gateway.aws_route_table.private",
            "module.shared.module.vpc.aws_internet_gateway.igw",
            "module.shared.module.vpc.aws_route_table.public",
            "module.shared.module.vpc.aws_vpc.main",
            "module.shared.module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": "rt-1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.255.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0ea9fb690fe421916657118",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d0ea9fb690fe4219",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09d7ba4681766cdec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.data.aws_vpc.shared",
            "module.shared.module.nat_gateway.aws_route_table.private",
            "module.shared.module.vpc.aws_internet_gateway.igw",
            "module.shared.module.vpc.aws_route_table.public",
            "module.shared.module.vpc.aws_vpc.main",
            "module.shared.module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_to_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-0d4ef2d98fc6ee223",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d4ef2d98fc6ee2231048290008",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d4ef2d98fc6ee223",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09d7ba4681766cdec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.data.aws_route_tables.shared",
            "module.shared.data.aws_vpc.shared",
            "module.shared.module.vpc.aws_vpc.main",
            "module.shared.module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": "rtb-0d552a3b2660fcd12",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d552a3b2660fcd121048290008",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0d552a3b2660fcd12",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-09d7ba4681766cdec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.data.aws_route_tables.shared",
            "module.shared.data.aws_vpc.shared",
            "module.shared.module.vpc.aws_vpc.main",
            "module.shared.module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "auto_accept": false,
            "id": "pcx-09d7ba4681766cdec",
            "peer_owner_id": "346011888304",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-0fb47682a4ba774bc",
            "region": "ap-northeast-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0293cca3cb29f35f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.shared.module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-09d7ba4681766cdec",
            "peer_owner_id": "346011888304",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-0fb47682a4ba774bc",
            "region": "ap-northeast-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0293cca3cb29f35f1",
            "vpc_peering_connection_id": "pcx-09d7ba4681766cdec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared.module.vpc.aws_vpc.main",
            "module.shared.module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    }
  ]
}